--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "babel-loader": "^8.0.0-beta.6",
     "copy-webpack-plugin": "^12.0.2",
     "css-loader": "^6.10.0",
+    "css-minimizer-webpack-plugin": "^6.0.0",
     "html-loader": "^5.0.0",
     "style-loader": "^3.3.4",
     "terser-webpack-plugin": "^5.3.10",
